updated category urls and index template

--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -7,12 +7,14 @@
 	<body>
 			<h1>Rango says...</h1>
 		<div>hey there partner!</div>
-		
+
 		<div>
 		{% if categories %}
 	<ul>
 		{% for category in categories %}
-			<li>{{ category.name }}</li>
+			<li>
+				<a href="/rango/category/{{ category.slug }}">{{category.name}}</a>
+			</li>
 		{% endfor %}
 	</ul>
 	{% else %}
