--- a/tango_with_django_project/templates/rango/add_page.html
+++ b/tango_with_django_project/templates/rango/add_page.html
@@ -1,4 +1,33 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+
+{% block title_block %}
+	Add Page
+{% endblock %}
+
+{% block body_block %}
+		<h1>Add a Page</h1>
+
+		<div>
+			<form id="category_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
+				{% csrf_token %}
+				{% for hidden in form.hidden_fields %}
+					{{ hidden }}
+				{% endfor %}
+				{%for field in form.visible_fields %}
+					{{ field.errors }}
+					{{ field.help_text }}
+					{{ field }}
+				{% endfor %}
+				<input type="submit" name="submit" value="Create Page"/>
+			</form>
+		</div>	
+
+	{% endblock %}
+
+
+
+<!-- <!DOCTYPE html>
 <html>
 <head>
 	<title>Rango</title>
@@ -20,4 +49,4 @@
 			</form>
 		</div>	
 	</body>
-</html>
+</html> -->
