--- a/tango_with_django_project/templates/rango/category.html
+++ b/tango_with_django_project/templates/rango/category.html
@@ -1,25 +1,25 @@
-<!DOCTYPE html>
- <html>
-	 <head>
-	 	<title>Rango</title>
-	 </head>
-		 <body>
-			 <div>
-			 {% if category %}
-			 <h1>{{ category.name }}</h1>
-			 {% if pages %}
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+
+{% block title_block %}
+	{{ category.name }}
+{% endblock %}
+
+{% block body_block %}
+	{% if category %}
+		<h1>{{ category.name }}</h1>
+
+		{% if pages %}
 			 <ul>
 			 {% for page in pages %}
 			 <li><a href="{{ page.url }}">{{ page.title }}</a></li>
 			 {% endfor %}
 			 </ul>
-			 <a href="/rango/category/{{category.slug}}/add_page/">Add Page</a> <br/>
-			 {% else %}
+		{% else %}
 			 <strong>No pages currently in category.</strong>
-			 {% endif %}
-			 {% else %}
+		{% endif %}
+		<a href="{% url 'add_page' category.slug %}">Add a Page</a>
+	{% else %}
 			 The specified category does not exist!
-			 {% endif %}
-			 </div>
-		 </body>
- </html>
+	{% endif %}
+	{% endblock %}
