--- a/tango_with_django_project/templates/rango/base.html
+++ b/tango_with_django_project/templates/rango/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load staticfiles %}
+{% load rango_template_tags %}
 
 <html>
 	<head lang="en">
@@ -11,6 +12,11 @@
 		</title>
 	</head>
 	<body>
+		<div>
+			{% block sidebar_block %}
+				{% get_category_list %}
+			{% endblock %}
+		</div>
 		<div>
 			{% block body_block %}
 			{% endblock %}
