--- a/tango_with_django_project/templates/rango/cats.html
+++ b/tango_with_django_project/templates/rango/cats.html
@@ -1,9 +1,14 @@
-<ul>
-	{% if cats %}
-		{% for c in cats %}
-			<li><a href="{% url 'show_category' c.slug %}">{{ c.name}}</a></li>
-		{% endfor %}
-	{% else %}
-		<li><strong>There are no categories present.</strong></li>
-	{% endif %}
-</ul>
+
+	{% for c in cats %}
+		{% if c == act_cat %}
+				<li>
+				<strong>
+					<a href="{% url 'show_category' c.slug %}">{{ c.name}}</a>
+				</strong>
+				</li>
+		{% else %}
+				<li>
+					<a href="{% url 'show_category' c.slug %}">{{ c.name}}</a>
+				</li>
+		{% endif %}
+	{% endfor %}
