--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -1,49 +1,43 @@
-<!DOCTYPE html>
-{% load staticfiles %}
-
-<html>
-<head>
-	<title>Rango</title>
-</head>
-	<body>
-			<h1>Rango says...</h1>
-		{% if user.is_authenticated %}
-			howdy {{ user.username }}!
-		{% else %}
-			hey there partner!
-		{% endif %}
-
+	{% extends 'rango/base.html' %}
+	{% load staticfiles %}
+	{% block title_block %}
+		Index
+	{% endblock %}
+	{% block body_block %}
 		<div>
-		<h1><strong>Most Liked Categories</strong></h1>
-		{% if categories %}
-	<ul>
-		{% for category in categories %}
-			<li>
-				<a href="/rango/category/{{ category.slug }}">{{category.name}}</a>
-			</li>
-		{% endfor %}
-	</ul>
-	{% else %}
-		<strong>There are no categories present.</strong>
-	{% endif %}
-	</div>
-
-	<div>
-		<h1><strong>Most Viewed Pages</strong></h1>
-		{% if pages %}
-	<ul>
-		{% for page in pages %}
-			<li>
-				<a href="{{ page.url }}">{{ page.title }}</a></a>
-			</li>
-		{% endfor %}
-	</ul>
-	{% else %}
-		<strong>There are no pages present.</strong>
-	{% endif %}
-	</div>
-
+        <h1>Rango says...</h1>       
+			hey there partner! 
+		</div>	
 		<div>
-		</div>
-</body>
-</html>
+			<div>
+				<h3>Most Liked Categories</h3>	
+			</div>
+         	{% if categories %}
+             <ul>
+                 {% for category in categories %}
+                 	<li><a href="{% url 'show_category' category.slug %}">{{ category.name }}</a></li>
+                 {% endfor %}
+             </ul>
+        {% else %}
+             <strong>There are no categories present.</strong>
+        {% endif %}
+			</div>
+			
+				<div>
+					<div>
+						<h3>Most Viewed Pages</h3>	
+					</div>
+	         	   {% if pages %}
+	             	<ul>
+	                 {% for page in pages %}
+	                 <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+	                 {% endfor %}
+	             	</ul>
+	        		{% else %}
+	             <strong>There are no categories present.</strong>
+	       	  		{% endif %}
+			</div>
+			
+        <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" /> 
+		
+	{% endblock %}
