--- a/tango_with_django_project/templates/rango/add_category.html
+++ b/tango_with_django_project/templates/rango/add_category.html
@@ -9,6 +9,7 @@
 		<h1>Add a Category</h1>
 
 		<div>
+			{% if user.is_authenticated %}
 			<form id="category_form" method="post" action="/rango/add_category/">
 				{% csrf_token %}
 				{% for hidden in form.hidden_fields %}
@@ -21,6 +22,8 @@
 				{% endfor %}
 				<input type="submit" name="submit" value="Create Category"/>
 			</form>
+			{% else %}
+			<h1> please register before adding a category</h1>
 		</div>	
 
 	{% endblock %}
