--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -36,6 +36,7 @@
 	        		{% else %}
 	             <strong>There are no categories present.</strong>
 	       	  		{% endif %}
+	       	  		<p> visits: {{ visits }}</p>
 			</div>
 			
         <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" /> 
